# guile-dbus

./: .dir-locals.el  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  configure.ac
am/: Makefile.am
doc/: Makefile.am  dbus-connection.texi  dbus-message.texi  guile-dbus.texi  pending-call.texi
examples/: notify-send.scm
libguile-dbus/: .gitignore  Makefile.am  common.c  common.h  dbus-connection-func.c  dbus-connection-func.h  dbus-connection-main.c  dbus-connection-type.c  dbus-connection-type.h  dbus-message-func.c  dbus-message-func.h  dbus-message-main.c  dbus-message-type.c  dbus-message-type.h  dbus-pending-call-func.c  dbus-pending-call-func.h  dbus-pending-call-main.c  dbus-pending-call-type.c  dbus-pending-call-type.h  dbus-pending-call.c  dbus-pending-call.h  dbus-type.c  dbus-type.h  error.c  error.h  symbols.c  symbols.h
modules/: Makefile.am
modules/dbus/: Makefile.am  connection.scm  message.scm  pending-call.scm
tests/: Makefile.am  message.scm
